--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ disqusShortname = ""
   # CSS class.
 
   # Provide your metadata here.
-  name = "Your name"
+  name = "Simon Yang"
   description = "Your description"
 
   # Link custom assets relative to /static
@@ -93,19 +93,19 @@ disqusShortname = ""
     
     [[params.tiles.showcase]]
       title = "Simon"
-      subtitle = "Ipsum Dolor Sit Amet"
-      image = "pic01.jpg"
+      subtitle = "Welcome to the site"
+      image = "canarywharf.jpg"
       url = "blogs/aliquam"
 
     [[params.tiles.showcase]]
-      title = "Tempus"
-      subtitle = "Feugiat Amet Tempus"
-      image = "pic02.jpg"
+      title = "DJIA Stock Returns"
+      subtitle = "Stocks return until 2015"
+      image = "nyse.jpg"
       url = "blogs/tempus"
-
+blo
     [[params.tiles.showcase]]
-      title = "Magna"
-      subtitle = "Lorem Etiam Nullam"
+      title = "Life Expectancy"
+      subtitle = "Life Expectancy by Continent"
       image = "pic03.jpg"
       url = "blogs/magna"
 
@@ -116,14 +116,14 @@ disqusShortname = ""
       url = "blogs/blog5"
 
     [[params.tiles.showcase]]
-      title = "Consequat"
-      subtitle = "Ipsum Dolor Sit Amet"
-      image = "pic05.jpg"
+      title = "IMD Movie Ratings"
+      subtitle = "Difference in movie ratings by Genre"
+      image = "Movie.jpg"
       url = "blogs/ipsum"
 
     [[params.tiles.showcase]]
-      title = "Etiam"
-      subtitle = "Feugiat Amet Tempus"
+      title = "Climate change"
+      subtitle = "Annual temperature"
       image = "pic06.jpg"
       url = "blogs/ipsum"
     # You can make more showcases by copy and pasting the code above
@@ -138,7 +138,7 @@ disqusShortname = ""
   # Section Type Two
   [params.two]
     enable = true
-    title = "Massa libero"
+    title = "Welcome to my site"
     subtitle = """Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. 
     Mauris aliquet magna magna sed nunc rhoncus pharetra. 
     Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. 
@@ -197,8 +197,8 @@ disqusShortname = ""
 
     [[params.footer.social]]
       icon = "fa-facebook"
-      url= "https://www.facebook.com"
-      label = "Facebook"
+      url= "https://www.facebook.com/profile.php?id=100008026875758"
+      label = "My Facebook"
 
     [[params.footer.social]]
       icon = "fa-instagram"
@@ -207,13 +207,13 @@ disqusShortname = ""
     
     [[params.footer.social]]
       icon = "fa-github"
-      url= "https://www.github.com"
+      url= "https://github.com/chulhoy1993/myzebsite7"
       label = "GitHub"
 
     [[params.footer.social]]
       icon = "fa-linkedin"
-      url= "https://www.linkedin.com"
-      label = "LinkedIn"
+      url= "https://www.linkedin.com/in/chulhoyang/"
+      label = "My LinkedIn"
 
     [[params.footer.quicklinks]]
       text = "Design: "
