--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 # Site settings
 baseURL = "https://simonyang1.netlify.app/"
 languageCode = "en-us"
-title = "Portfolio website for Kostis Christodoulou"
+title = "Portfolio website for MFA 2021"
 theme = "forty"
 
 # Enter your tracking code to enable Google Analytics
@@ -82,8 +82,8 @@ disqusShortname = ""
     # To change the background image on the homepage banner, replace 'banner.jpg' in
     # the 'static/img' folder.
     title = "Hi, my name is Simon"
-    subtitle = "A RESPONSIVE SITE TEMPLATE DESIGNED BY HTML5 UP\nAND RELEASED UNDER THE CREATIVE COMMONS."
-    buttonText = "Get Started"
+    subtitle = "WELCOME TO MY SITE WHICH WAS DESIGNED BY HTML5 AND RELEASED UNDER THE CREATIVE COMMONS."
+    buttonText = "Find out more"
 
 
   # Tiles Section
@@ -95,19 +95,19 @@ disqusShortname = ""
       title = "Simon"
       subtitle = "Welcome to the site"
       image = "canarywharf.jpg"
-      url = "blogs/aliquam"
+      url = "blogs/CV"
 
     [[params.tiles.showcase]]
-      title = "DJIA Stock Returns"
-      subtitle = "Stocks return until 2015"
-      image = "nyse.jpg"
-      url = "blogs/tempus"
+      title = "Analysis on Top 25 Countries that consume alcohol"
+      subtitle = "Are stereotypes true?"
+      image = "drinks.jpg"
+      url = "blogs/homework1_wine"
 
     [[params.tiles.showcase]]
-      title = "Life Expectancy"
-      subtitle = "Life Expectancy by Continent"
+      title = "IBM HR Analysis"
+      subtitle = "Pay structure analysis based on roles"
       image = "pic03.jpg"
-      url = "blogs/magna"
+      url = "blogs/ibm"
 
     [[params.tiles.showcase]]
       title = "Boris Bikes"
@@ -118,8 +118,8 @@ disqusShortname = ""
     [[params.tiles.showcase]]
       title = "IMD Movie Ratings"
       subtitle = "Difference in movie ratings by Genre"
-      image = "Movie.jpg"
-      url = "blogs/ipsum"
+      image = "amc.jpg"
+      url = "blogs/movies"
 
     [[params.tiles.showcase]]
       title = "Climate change"
